# thermal_access_pilot

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: kaliningrad.toml
outputs/five_city_tree_proxy/: summary.csv
outputs/five_city_tree_proxy/bergen_norway/: summary.json
outputs/five_city_tree_proxy/bergen_norway/tables/: building_routes.parquet  buildings.parquet  routes.parquet  stops.parquet  tree_canopies.parquet  trees.parquet
outputs/five_city_tree_proxy/bologna_italy/: summary.json
outputs/five_city_tree_proxy/bologna_italy/tables/: building_routes.parquet  buildings.parquet  routes.parquet  stops.parquet  tree_canopies.parquet  trees.parquet
outputs/five_city_tree_proxy/brno_czechia/: summary.json
outputs/five_city_tree_proxy/coimbra_portugal/: summary.json
outputs/five_city_tree_proxy/delft_netherlands/: summary.json
outputs/madrid_utci_5km/: summary.json
outputs/madrid_utci_5km/tables/: building_results.parquet  routes.parquet
src/thermal_access_pilot/: __init__.py  __main__.py  capa_dc.py  config.py  coolwalks_nyc.py  coolwalks_nyc_shadow_graph.jl  external.py  local_inputs.py  madrid_service_access.py  madrid_service_access_local.py  madrid_service_access_offline.py  madrid_utci.py  maps.py  pipeline.py  routing.py  surfaces.py  thermal.py  tree_proxy_five_cities.py  weather.py
tests/: conftest.py  test_capa_dc.py  test_config.py  test_coolwalks_nyc.py  test_local_inputs.py  test_madrid_service_access.py  test_madrid_utci.py  test_outputs.py  test_routing.py  test_tree_proxy_five_cities.py  test_weather.py
(+17 files in other folders)
